96 log4j yaml configuration, deps version update